<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/indigo"
    tools:context=".MainActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:padding="20dp">

        <TextView
            android:id="@+id/TV_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="2"
            android:maxLines="2"
            android:text=""
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="@id/TV_result"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.128" />

        <TextView
            android:id="@+id/TV_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:lines="2"
            android:maxLines="2"
            android:text=""
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <LinearLayout
        android:id="@+id/Row1"
        style="@style/buttonRow">
        <Button
            android:id="@+id/acButton"
            style="@style/buttonNumber"
            android:text="@string/buttonACStr"
            android:onClick="acButtonOnClick"
            android:background="@color/midnight_blue"
            />
        <Button
            android:id="@+id/delButton"
            style="@style/buttonNumber"
            android:text="@string/buttonDelStr"
            android:onClick="delButtonOnClick"
            android:background="@color/midnight_blue"
            />
        <Button
            android:id="@+id/bracketLeftButton"
            android:layout_weight="0.5"
            style="@style/buttonNumber"
            android:text="@string/buttonBracketLeftStr"
            />
        <Button
            android:id="@+id/bracketRightButton"
            android:layout_weight="0.5"
            style="@style/buttonNumber"
            android:text="@string/buttonBracketRightStr"
            />
        <Button
            android:id="@+id/multiplyButton"
            style="@style/buttonOps"
            android:text="@string/buttonOpMultiplyStr"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/Row2"
        style="@style/buttonRow">
        <Button
            android:id="@+id/Button1"
            style="@style/buttonNumber"
            android:text="@string/buttonNum1Str"
        />
        <Button
            android:id="@+id/Button2"
            style="@style/buttonNumber"
            android:text="@string/buttonNum2Str"
            />
        <Button
            android:id="@+id/Button3"
            style="@style/buttonNumber"
            android:text="@string/buttonNum3Str"
            />
        <Button
            android:id="@+id/plusButton"
            style="@style/buttonOps"
            android:text="@string/buttonOpPlusStr"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/Row3"
        style="@style/buttonRow">
        <Button
            android:id="@+id/Button4"
            style="@style/buttonNumber"
            android:text="@string/buttonNum4Str"
            />
        <Button
            android:id="@+id/Button5"
            style="@style/buttonNumber"
            android:text="@string/buttonNum5Str"
            />
        <Button
            android:id="@+id/Button6"
            style="@style/buttonNumber"
            android:text="@string/buttonNum6Str"
            />
        <Button
            android:id="@+id/minusButton"
            style="@style/buttonOps"
            android:text="@string/buttonOpMinusStr"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/Row4"
        style="@style/buttonRow">
        <Button
            android:id="@+id/Button7"
            style="@style/buttonNumber"
            android:text="@string/buttonNum7Str"
            />
        <Button
            android:id="@+id/Button8"
            style="@style/buttonNumber"
            android:text="@string/buttonNum8Str"
            />
        <Button
            android:id="@+id/Button9"
            style="@style/buttonNumber"
            android:text="@string/buttonNum9Str"
            />
        <Button
            android:id="@+id/divideButton"
            style="@style/buttonOps"
            android:text="@string/buttonOpDivideStr"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/Row5"
        style="@style/buttonRow">
        <Button
            android:id="@+id/dotButton"
            style="@style/buttonNumber"
            android:text="@string/buttonDotStr"
            />
        <Button
            android:id="@+id/Button0"
            style="@style/buttonNumber"
            android:text="@string/buttonNum0Str"
            />
        <Button
            android:id="@+id/equButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@color/purple_blue"
            android:textColor="@color/black"
            android:text="@string/buttonOpEquStr"
            android:layout_weight="2"
            android:textSize="40sp"
            />
    </LinearLayout>



</LinearLayout>